# autoclick

./: CMakeLists.txt  LICENSE  README.md  main.cpp
icon/: resource.h  resource.rc
module/: module.h
module/impl/: click_input.hpp
